--- a/index.html
+++ b/index.html
@@ -9,7 +9,52 @@
   </head>
   <body>
     <div class="container">
-      <div class="left_side"></div>
+      <div class="left_side">
+        <div class="profileText">
+          <div class="imgBx">
+            <img src="imghv/fotohojadevida.jpeg" />
+          </div>
+          <h2>JONATHA TEHERAN <br /><span>Desarrollador Web</span></h2>
+        </div>
+
+
+        <div class="ContacInfo">
+          <h3 class="title">Contacto</h3>
+          <ul>
+            <li>
+              <span class="icon"></span>
+              <span class="text">+57 3006421761</span>
+            </li>
+          </ul>
+
+          <ul>
+            <li>
+              <span class="icon"></span>
+              <span class="text">jteheran96@hotmail.com</span>
+            </li>
+          </ul>
+
+          <ul>
+            <li>
+              <span class="icon"></span>
+              <span class="text">www.mywebsite.com</span>
+            </li>
+          </ul>
+
+          <ul>
+            <li>
+              <span class="icon"></span>
+              <span class="text"> www.linkedin.com/me</span>
+            </li>
+          </ul>
+
+          <ul>
+            <li>
+              <span class="icon"></span>
+              <span class="text">Maica, La Guajira, Colombia</span>
+            </li>
+          </ul>
+      </div>
       <div class="rigth_side"></div>
     </div>
   </body>
