--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV JONATHA TEHERAN</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
@@ -22,36 +23,36 @@
           <h3 class="title">Contacto</h3>
           <ul>
             <li>
-              <span class="icon"></span>
+              <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
               <span class="text">+57 3006421761</span>
             </li>
           </ul>
 
           <ul>
             <li>
-              <span class="icon"></span>
+              <span class="icon"><i class="fa fa-envelope-open" aria-hidden="true"></i></span>
               <span class="text">jteheran96@hotmail.com</span>
             </li>
           </ul>
 
           <ul>
             <li>
-              <span class="icon"></span>
+              <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
               <span class="text">www.mywebsite.com</span>
             </li>
           </ul>
 
           <ul>
             <li>
-              <span class="icon"></span>
+              <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
               <span class="text"> www.linkedin.com/me</span>
             </li>
           </ul>
 
           <ul>
             <li>
-              <span class="icon"></span>
-              <span class="text">Maica, La Guajira, Colombia</span>
+              <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+              <span class="text">Maicao, La Guajira, Colombia</span>
             </li>
           </ul>
       </div>
