--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="imgBx">
             <img src="imghv/fotohojadevida.jpeg" />
           </div>
-          <h2>JONATHA TEHERAN <br /><span>Desarrollador Web</span></h2>
+          <h2>JONATHA TEHERAN<br/><span>Desarrollador Web</span></h2>
         </div>
 
 
@@ -53,6 +53,47 @@
             <li>
               <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
               <span class="text">Maicao, La Guajira, Colombia</span>
+            </li>
+          </ul>
+      </div>
+
+
+
+      <div class="contacInfoeducation">
+          <h3 class="title">Educacion </h3>
+          <ul>
+            <li>
+              <h5>2013 - 2016</h5>
+              <h4>Tecnico en computacion</h4>
+              <h4>Sena</h4>
+            </li>
+            <li>
+              <h5>2016 - 2020</h5>
+              <h4>Contaduria publica</h4>
+              <h4>Universidad UNAD</h4>
+            </li>
+            <li>
+              <h5>2023 - 2023</h5>
+              <h4>Desarrollador Full Stack</h4>
+              <h4>Protalento</h4>
+            </li>
+          </ul>
+      </div>
+
+        <div class="contacInfolenguajes">
+          <h3 class="title">Lenguajes </h3>
+          <ul>
+            <li>
+              <span class="text">Ingles</span>
+              <span class="percent"></span>
+            </li>
+            <li>
+              <span class="text">Español</span>
+              <span class="percent"></span>
+            </li>
+            <li>
+              <span class="text">frances</span>
+              <span class="percent"></span>
             </li>
           </ul>
       </div>
