--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV JONATHA TEHERAN</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+      integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
@@ -15,52 +20,61 @@
           <div class="imgBx">
             <img src="imghv/fotohojadevida.jpeg" />
           </div>
-          <h2>JONATHA TEHERAN<br/><span>Desarrollador Web</span></h2>
+          <h2>JONATHA TEHERAN<br /><span>Desarrollador Web</span></h2>
         </div>
-
 
         <div class="ContacInfo">
           <h3 class="title">Contacto</h3>
           <ul>
             <li>
-              <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
+              <span class="icon"
+                ><i class="fa fa-phone" aria-hidden="true"></i
+              ></span>
               <span class="text">+57 3006421761</span>
             </li>
           </ul>
 
           <ul>
             <li>
-              <span class="icon"><i class="fa fa-envelope-open" aria-hidden="true"></i></span>
+              <span class="icon"
+                ><i class="fa fa-envelope-open" aria-hidden="true"></i
+              ></span>
               <span class="text">jteheran96@hotmail.com</span>
             </li>
           </ul>
 
           <ul>
             <li>
-              <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
+              <span class="icon"
+                ><i class="fa fa-globe" aria-hidden="true"></i
+              ></span>
               <span class="text">www.mywebsite.com</span>
             </li>
           </ul>
 
           <ul>
             <li>
-              <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
+              <span class="icon"
+                ><i class="fa fa-linkedin" aria-hidden="true"></i
+              ></span>
               <span class="text"> www.linkedin.com/me</span>
             </li>
           </ul>
 
           <ul>
             <li>
-              <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+              <span class="icon"
+                ><i class="fa fa-map-marker" aria-hidden="true"></i
+              ></span>
               <span class="text">Maicao, La Guajira, Colombia</span>
             </li>
           </ul>
-      </div>
+        </div>
 
+        <br />
 
-
-      <div class="contacInfoeducation">
-          <h3 class="title">Educacion </h3>
+        <div class="contacInfo education">
+          <h3 class="title">Educacion</h3>
           <ul>
             <li>
               <h5>2013 - 2016</h5>
@@ -78,24 +92,32 @@
               <h4>Protalento</h4>
             </li>
           </ul>
-      </div>
+        </div>
+        <br />
 
-        <div class="contacInfolenguajes">
-          <h3 class="title">Lenguajes </h3>
+        <div class="contacInfo lenguajes">
+          <h3 class="title">Lenguajes</h3>
           <ul>
             <li>
               <span class="text">Ingles</span>
-              <span class="percent"></span>
+              <span class="percent">
+                <div style="width: 90%"></div>
+              </span>
             </li>
             <li>
               <span class="text">Español</span>
-              <span class="percent"></span>
+              <span class="percent">
+                <div style="width: 45%"></div>
+              </span>
             </li>
             <li>
               <span class="text">frances</span>
-              <span class="percent"></span>
+              <span class="percent">
+                <div style="width: 82%"></div>
+              </span>
             </li>
           </ul>
+        </div>
       </div>
       <div class="rigth_side"></div>
     </div>
