--- a/index.html
+++ b/index.html
@@ -119,7 +119,67 @@
           </ul>
         </div>
       </div>
-      <div class="rigth_side"></div>
+      <div class="rigth_side">
+        <div class="about">
+          <h2 class="title2">Perfil</h2>
+          <p> Soy un profesional con mas de diaz años de experiencia en el manejo de base de datos, asesoramientos como gestion del talento humano y gestiones administratvias, he enriquecido mi conocimiento a lo largo del tiempo en con diferentes cursos como contaduria publica y ahora como desarrollador web, me considero una persona competitiva que busca siempre realizar los trabajos asigandos de la forma mas eficiente posible, soy excelente trabajando en equipo pero tambien trabajando de manera individual, me caracterizo por ser una persona que tiene una gran comunicacion acertiva y ser un solucionador de problemas. <br> <br> Mis estudios a lo largo del tiempo han sido modalidad virtual lo que me ha enseñado a trabajar de manera remota, por otra parte me gusta seguir enriqueciendo mis conocimientos dia a dia pues soy de los que piensan que todos los dias podemos aprender algo nuevo  </p>
     </div>
+
+          <div class="about">
+          <h2 class="title2">EXPERIENCIA</h2>
+          <div class="box">
+            <div class="year_company">
+              <h5>2023-Presente</h5>
+              <h5>Fundacion Bastidas</h5>
+            </div>
+            <div class="text">
+              <h4>Gestor de datos</h4>
+              <p>Realizar registro y actualizacion de base de datos de la poblacion focalizada</p>
+            </div>
+
+            <div class="box">
+            <div class="year_company">
+              <h5>2020-2022</h5>
+              <h5>Fundacion Proyecto vida</h5>
+            </div>
+            <div class="text">
+              <h4>Digitador</h4>
+              <p>Realizar registro y verificacion en las paginas del gobierno nacional de la informacion proporcinada de la poblacion focalizada</p>
+            </div>
+             <div class="box">
+            <div class="year_company">
+              <h5>2014-2019</h5>
+              <h5>Fundacion Revivir por la vida</h5>
+            </div>
+            <div class="text">
+              <h4>Digitador</h4>
+              <p>Realizar registro y verificacion en las paginas del gobierno nacional de la informacion proporcinada de la poblacion focalizada</p>
+            </div>
+
+            <div class="about skills"></div>
+            <h2 class="title2">HABILIDADES</h2>
+            <div class="box">
+              <h4>HTML</h4>
+              <div class="percent">
+              </div>
+              <div class="box">
+              <h4>CSS</h4>
+              <div class="percent">
+              </div>
+              <div class="box">
+              <h4>JAVASCRIP</h4>
+              <div class="percent">
+                <div class="box">
+              <h4>REACT</h4>
+              <div class="percent">
+                <div class="box">
+              <h4>NODEJS</h4>
+              <div class="percent">
+              </div>
+            </div>
+
+
+          </div>
+
   </body>
 </html>
